--- a/vdso_bench/Makefile
+++ b/vdso_bench/Makefile
@@ -2,7 +2,7 @@ CC      = gcc
 CFLAGS  = -Wall -O2 -g -W
 ALL_CFLAGS = $(CFLAGS) -D_GNU_SOURCE -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64
 
-PROGS = vdso
+PROGS = vdso_bench
 ALL = $(PROGS)
 
 $(PROGS): | depend
@@ -12,7 +12,7 @@ all: $(ALL)
 %.o: %.c
 	$(CC) -o $*.o -c $(ALL_CFLAGS) $<
 
-vdso: vdso.o
+vdso_bench: vdso_bench.o
 	$(CC) $(ALL_CFLAGS) -o $@ $(filter %.o,$^) -lpthread
 
 depend:
