--- a/aarch64/stilp/Makefile
+++ b/aarch64/stilp/Makefile
@@ -1,5 +1,5 @@
 CC      = clang
-CFLAGS  = -Wall -O2 -g -W
+CFLAGS  = -Wall -O2 -g -W -march=armv8.4-a+rcpc3 -g
 ALL_CFLAGS = $(CFLAGS) -D_GNU_SOURCE -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64
 
 # Compilation targets
