--- a/vdso_bench/Makefile
+++ b/vdso_bench/Makefile
@@ -1,7 +1,11 @@
 CC      = clang
 CFLAGS  = -Wall -O2 -g -W
-ALL_CFLAGS = $(CFLAGS) -D_GNU_SOURCE -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64  -march=armv9-a
-PACA_FLAGS =-mbranch-protection=pac-ret+bti  -march=armv8.7-a
+ALL_CFLAGS = $(CFLAGS) -D_GNU_SOURCE -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64
+
+ifeq ($(ARCH), arm64)
+    ARCH_CFLAGS = -DCONFIG_ARM -march=armv9-a
+    PACA_FLAGS =-mbranch-protection=pac-ret+bti  -march=armv8.7-a
+endif
 
 # Compilation targets
 PROGS = vdso_bench vdso_bench_paca
