--- a/vdso_bench/Makefile
+++ b/vdso_bench/Makefile
@@ -2,10 +2,13 @@ CC      = clang
 CFLAGS  = -Wall -O2 -g -W
 ALL_CFLAGS = $(CFLAGS) -D_GNU_SOURCE -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64
 
-ifeq ($(ARCH), arm64)
+uname_p := $(shell uname -p)
+
+ifeq ($(uname_p),aarch64)
     ARCH_CFLAGS = -DCONFIG_ARM -march=armv9-a
     PACA_FLAGS =-mbranch-protection=pac-ret+bti  -march=armv8.7-a
 endif
+ALL_CFLAGS += $(ARCH_CFLAGS)
 
 # Compilation targets
 PROGS = vdso_bench vdso_bench_paca
