--- a/LSE/Makefile
+++ b/LSE/Makefile
@@ -1,5 +1,5 @@
 CC = clang
-CFLAGS = -O2 -march=armv8-a+lse
+CFLAGS = -O2 -Wall -march=armv8-a+lse
 
 percpu_bench: percpu_bench.c
 	$(CC) $(CFLAGS) percpu_bench.c -o percpu_bench
