--- a/LSE/Makefile
+++ b/LSE/Makefile
@@ -7,10 +7,19 @@ percpu_bench: percpu_bench.c
 percpu_bench_debug: percpu_bench.c
 	$(CC) -g -march=armv8-a+lse percpu_bench.c -o percpu_bench_debug
 
+parallel_atomic_bench: parallel_atomic_bench.c
+	$(CC) $(CFLAGS) -pthread parallel_atomic_bench.c -o parallel_atomic_bench
+
+parallel_atomic_bench_debug: parallel_atomic_bench.c
+	$(CC) -g -Wall -march=armv8-a+lse -pthread parallel_atomic_bench.c -o parallel_atomic_bench_debug
+
 asm: percpu_bench.c
 	$(CC) $(CFLAGS) -S percpu_bench.c -o percpu_bench.s
 
-clean:
-	rm -f percpu_bench percpu_bench.s
+parallel_asm: parallel_atomic_bench.c
+	$(CC) $(CFLAGS) -S parallel_atomic_bench.c -o parallel_atomic_bench.s
 
-all: percpu_bench percpu_bench_debug asm
+clean:
+	rm -f percpu_bench percpu_bench.s parallel_atomic_bench parallel_atomic_bench.s parallel_atomic_bench_debug
+
+all: percpu_bench percpu_bench_debug parallel_atomic_bench parallel_atomic_bench_debug asm parallel_asm
